--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "license": "ISC",
   "description": "Backend sistema de requisitos de jogos",
   "dependencies": {
+    "aula02": "file:",
+    "bcrypt": "^5.1.1",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
