--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
   "dependencies": {
     "aula02": "file:",
     "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.21.1",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.10.0",
+    "mongoose": "^8.8.1",
     "mysql2": "^3.11.3",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
