--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
   "description": "Backend sistema de requisitos de jogos",
   "dependencies": {
     "aula02": "file:",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
+    "cors": "^2.8.5",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.11.3",
     "pg": "^8.13.1",
